--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sturee-app",
+  "name": "sese-backend",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^13.0.1",
     "express": "^4.17.2",
+    "firebase-admin": "^10.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
     "morgan": "^1.10.0"
