category/subcategory admin management, user: create new post, get posts

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 NODE_ENV=development
 PORT=5000
-DATABASE=MONGO_DATABSE_URL
+DATABASE=DATABASE_URL
+JWT_SECRET='zxczxczxczxc'
+JWT_EXPIRES_IN='7d'
+
+ADMIN_PASSWORD=seseadmin2022gdsc
