--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "firebase-admin": "^10.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
